# svo-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: svo_mono.cpp  test.cpp
test/: short.MOV  test_svo_mono.py
